# AskTux

./: .gitignore  INSTALL.md  README.ai  README.md  ROADMAP.ai  ROADMAP.md  meson.build  meson_options.txt  notes.txt
.ai/: project.ai  system.ai
data/: asktux.desktop  linhelp.desktop  meson.build  schema.sql  style.css
src/: Config.cpp  Config.h  LLMClient.cpp  LLMClient.h  Log.h  MainWindow.cpp  MainWindow.h  MarkdownRenderer.cpp  MarkdownRenderer.h  OllamaClient.cpp  OllamaClient.h  OpenAIClient.cpp  OpenAIClient.h  PromptBuilder.cpp  PromptBuilder.h  ScopedTimer.h  SettingsDialog.cpp  SettingsDialog.h  StreamParser.cpp  StreamParser.h  SystemInfo.cpp  SystemInfo.h  Tool.cpp  Tool.h  main.cpp  meson.build
tests/: meson.build  test_PromptBuilder.cpp  test_StreamParser.cpp  test_SystemInfo.cpp
