# ── Desktop file ──────────────────────────────────────────────────────────────
install_data('linhelp.desktop',
  install_dir : get_option('datadir') / 'applications',
)

# ── Icon ──────────────────────────────────────────────────────────────────────
install_data('icons/linhelp.svg',
  install_dir : get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)

# ── CSS stylesheet (editable post-compilation) ────────────────────────────────
install_data('style.css',
  install_dir : get_option('datadir') / 'linhelp',
)

# ── AppStream metadata (optional) ─────────────────────────────────────────────
# install_data('linhelp.appdata.xml',
#   install_dir : get_option('datadir') / 'metainfo',
# )
