# Unit tests — requires GTest or a simple custom test framework.
# For now, this file is a placeholder. Enable with:
#   meson setup build -Dbuild_tests=true

# test_exe = executable('test_asktux',
#   'test_SystemInfo.cpp',
#   'test_PromptBuilder.cpp',
#   'test_StreamParser.cpp',
#   dependencies : [gtkmm_dep, curl_dep, nlohmann_json_dep, thread_dep],
# )
# test('asktux-tests', test_exe)
